# mango-bot-rust

./: .env.example  .gitignore  Cargo.toml  LICENSE  database.json  mango_profile.ase  readme.md
src/: main.rs
src/data/: cache.rs  database.rs  git_database.rs  mod.rs
src/database/: database.rs  git.rs
src/discord/: commands.rs  framework.rs  help.rs  mod.rs
