[package]
name = "mango-bot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = {version = "0.11.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "cache", "http"] }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
serde_json = {version = "1.0.82"}
serde = {version = "1.0.82"}